# salon-manager

./: .gitignore  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/api/: serializers.py  urls.py  views.py
apps/bookings/: apps.py  emails.py  forms.py  models.py  signals.py  utils.py  views.py
apps/bookings/migrations/: 0001_initial.py
apps/services/: admin.py  views.py
apps/services/migrations/: 0001_initial.py
bookings/: admin.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
nginx/: prod.conf
requirements/: base.txt  development.txt
scripts/: backup_db.sh
services/: admin.py  models.py
services/migrations/: 0001_initial.py
src/api/: serializers.py  urls.py  views.py
src/bookings/: forms.py  models.py  utils.py  views.py
src/bookings/migrations/: 0001_initial.py  0002_alter_appointment_employee.py
src/config/: settings.py  urls.py
src/services/: admin.py  models.py  views.py
src/services/migrations/: 0002_alter_employee_first_name_alter_employee_last_name_and_more.py  0002_servicecategory_alter_employee_first_name_and_more.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: base.html  home.html
static/css/: style.css
static/js/: script.js
templates/: base.html  home.html
templates/emails/: booking_confirmation_client.html  booking_notification_salon.html
