[project]
name = "salon-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.6",
    "djangorestframework==3.17.1",
    "gunicorn==26.0.0",
    "packaging==26.2",
    "psycopg-binary==3.3.4",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
